[package]
name = "projeto-final-sd"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "procedures-server"
path = "src/server.rs"

[[bin]]
name = "procedures-client"
path = "src/client.rs"

[dependencies]
prost = "0.11.9"
tonic = "0.9.2"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
warp = "0.3.5"
serde = "1.0.167"
thiserror = "1.0.43"
chrono = "0.4.26"
futures = "0.3.28"
mongodb = "2.6.0"

[build-dependencies]
tonic-build = "0.9.2"
